--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
                 </li>
 
                 <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="category.html" id="dropdown05" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Categorías</a>
-                  <div class="dropdown-menu" aria-labelledby="dropdown05">
-                    <a class="dropdown-item" href="category.html">Estilo de vida</a>
-                    <a class="dropdown-item" href="category.html">Hobbies</a>
-                    <a class="dropdown-item" href="category.html">Viajes</a>
+                  <a class="nav-link dropdown-toggle" href="category.html" id="dropdown05" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Categorías (Próximamente)</a>
+                  <div class="dropdown-menu" aria-labelledby="dropdown05">                    
+                    <a class="dropdown-item" href="#">Estilo de vida</a>
+                    <a class="dropdown-item" href="#">Hobbies</a>
+                    <a class="dropdown-item" href="#">Viajes</a>
                   </div>
 
                 </li>
@@ -417,10 +417,10 @@
             <div class="col-md-4">
               <h3>Sobre mí</h3>
               <p class="mb-4">
-                <img src="images/img_1.jpg" alt="Image placeholder" class="img-fluid">
+                <img src="images/person_1.jpg" alt="Image placeholder" class="img-fluid">
               </p>
 
-              <p>Lorem ipsum dolor sit amet sa ksal sk sa, consectetur adipisicing elit. Ipsa harum inventore reiciendis. <a href="#">Leer más</a></p>
+              <p>Soy Marcos, desarrollador móvil para dispositivos Android. Desde pequeño he sentido interés por los dispositivos informáticos <a href="about.html">Leer más</a></p>
             </div>
 
 
