email and github added

--- a/blog-single.html
+++ b/blog-single.html
@@ -13,6 +13,9 @@
 
     <link rel="stylesheet" href="fonts/ionicons/css/ionicons.min.css">
     <link rel="stylesheet" href="fonts/fontawesome/css/font-awesome.min.css">
+
+    <link rel="icon" href="images/icon.png">
+    
     <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
 
     <!-- Theme Style -->
@@ -29,8 +32,8 @@
             <div class="row">
               <div class="col-9 social">
                 <a href="#"><span ></span>Marcos López</a>
-                <a href="#"><span class="fa fa-envelope"></span></a>
-                <a href="#"><span class="fa fa-github"></span></a>
+                <a href="mailto: marcos.lopez.andrdep@gmail.com "><span class="fa fa-envelope"></span></a>
+                <a href="https://github.com/marlopeR"><span class="fa fa-github"></span></a>
                 <a href="#"><span class="fa fa-twitter"></span></a>
                 <a href="#"><span class="fa fa-facebook"></span></a>
                 <a href="#"><span class="fa fa-instagram"></span></a>
@@ -473,8 +476,8 @@
                   <div class="mb-5">
                     <h3>Social</h3>
                     <ul class="list-unstyled footer-social">
-                      <li><a href="#"><span class="fa fa-envelope"></span> Email</a></li>
-                      <li><a href="#"><span class="fa fa-github"></span> Github</a></li>
+                      <li><a href="mailto: marcos.lopez.andrdep@gmail.com"><span class="fa fa-envelope"></span> Email</a></li>
+                      <li><a href="https://github.com/marlopeR"><span class="fa fa-github"></span> Github</a></li>
                       <li><a href="#"><span class="fa fa-twitter"></span> Twitter</a></li>
                       <li><a href="#"><span class="fa fa-facebook"></span> Facebook</a></li>
                       <li><a href="#"><span class="fa fa-instagram"></span> Instagram</a></li>
