--- a/about.html
+++ b/about.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="fonts/fontawesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
 
+    <link rel="icon" href="images/icon.png">
+
     <!-- Theme Style -->
     <link rel="stylesheet" href="css/style.css">
   </head>
@@ -29,8 +31,8 @@
             <div class="row">
               <div class="col-9 social">
                 <a href="#"><span ></span>Marcos López</a>
-                <a href="#"><span class="fa fa-envelope"></span></a>
-                <a href="#"><span class="fa fa-github"></span></a>
+                <a href="mailto: marcos.lopez.andrdep@gmail.com "><span class="fa fa-envelope"></span></a>
+                <a href="https://github.com/marlopeR"><span class="fa fa-github"></span></a>
                 <a href="#"><span class="fa fa-twitter"></span></a>
                 <a href="#"><span class="fa fa-facebook"></span></a>
                 <a href="#"><span class="fa fa-instagram"></span></a>
@@ -118,7 +120,7 @@
                 <img src="images/person_1.jpg" alt="Image placeholder" class="img-fluid">
               </p>
 
-              <p>Soy Marcos, desarrollador móvil para dispositivos Android. Desde pequeño he sentido interés por los dispositivos informáticos <a href="#">Leer más</a></p>
+              <p>Soy Marcos, desarrollador móvil para dispositivos Android. Desde pequeño he sentido interés por los dispositivos informáticos <a href="about.html">Leer más</a></p>
             </div>
 
 
@@ -167,8 +169,8 @@
                   <div class="mb-5">
                     <h3>Social</h3>
                     <ul class="list-unstyled footer-social">
-                      <li><a href="#"><span class="fa fa-envelope"></span> Email</a></li>
-                      <li><a href="#"><span class="fa fa-github"></span> Github</a></li>
+                      <li><a href="mailto: marcos.lopez.andrdep@gmail.com"><span class="fa fa-envelope"></span> Email</a></li>
+                      <li><a href="https://github.com/marlopeR"><span class="fa fa-github"></span> Github</a></li>
                       <li><a href="#"><span class="fa fa-twitter"></span> Twitter</a></li>
                       <li><a href="#"><span class="fa fa-facebook"></span> Facebook</a></li>
                       <li><a href="#"><span class="fa fa-instagram"></span> Instagram</a></li>
