--- a/categoria(sin-editar).html
+++ b/categoria(sin-editar).html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="fonts/fontawesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
 
+    <link rel="icon" href="images/icon.png">
+
     <!-- Theme Style -->
     <link rel="stylesheet" href="css/style.css">
   </head>
